--- a/app/src/main/res/layout/activity/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity/layout/activity_main.xml
@@ -1,161 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:background="#00000000"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
-    <LinearLayout
-        android:id="@+id/linear_create"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </LinearLayout>
-    <androidx.viewpager.widget.ViewPager
-        android:visibility="gone"
-        android:id="@+id/pager"
-        android:layout_above="@id/linear_menu_list_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <LinearLayout
-        android:background="#ffffff"
-        android:id="@+id/linear_menu_list_view"
-        android:orientation="vertical"
-        android:layout_above="@id/linear_menu"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <View
-            android:background="#f2f3f7"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"/>
-        <TextView
-            android:textColor="#808080"
-            android:textSize="15sp"
-            android:text=" ▼ "
-            android:id="@+id/menu_text"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="38dp"/>
-        <LinearLayout
-            android:id="@+id/menu_list_view"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="60dp">
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="5dp"
-                android:stateListAnimator="@null"
-                android:text="回到顶部"
-                android:id="@+id/button_top"
-                android:background="@drawable/button_event_back"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"/>
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
-                android:stateListAnimator="@null"
-                android:text="上一页"
-                android:id="@+id/button_up"
-                android:background="@drawable/button_event_back"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"/>
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
-                android:stateListAnimator="@null"
-                android:text="下一页"
-                android:id="@+id/button_down"
-                android:background="@drawable/button_event_back"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"/>
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="10dp"
-                android:stateListAnimator="@null"
-                android:text="刷新"
-                android:id="@+id/button_update"
-                android:background="@drawable/button_event_back"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:padding="10dp"
-        android:layout_alignParentBottom="true"
-        android:visibility="visible"
-        android:background="#ffffff"
-        android:id="@+id/linear_menu"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_gravity="center_vertical"
-            android:id="@+id/menu_square"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:src="@drawable/square_checked_true_icon"
-                android:id="@+id/img_square"
-                android:layout_gravity="center"
-                android:layout_width="30dp"
-                android:layout_height="30dp"/>
-            <TextView
-                android:id="@+id/text_square"
-                android:layout_gravity="center"
-                android:text="广场"
-                android:textSize="11sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_gravity="center_vertical"
-            android:id="@+id/menu_hot"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:src="@drawable/hot_checked_true_icon"
-                android:id="@+id/img_hot"
-                android:layout_gravity="center"
-                android:layout_width="30dp"
-                android:layout_height="30dp"/>
-            <TextView
-                android:id="@+id/text_hot"
-                android:layout_gravity="center"
-                android:text="热门"
-                android:textSize="11sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_gravity="center_vertical"
-            android:id="@+id/menu_home"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:src="@drawable/home_checked_true_icon"
-                android:id="@+id/img_home"
-                android:layout_gravity="center"
-                android:layout_width="30dp"
-                android:layout_height="30dp"/>
-            <TextView
-                android:id="@+id/text_home"
-                android:layout_gravity="center"
-                android:text="我的"
-                android:textSize="11sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-    </LinearLayout>
+    android:layout_height="match_parent">
 
 </RelativeLayout>
