--- a/app/src/main/res/layout/view/layout/view_square.xml
+++ b/app/src/main/res/layout/view/layout/view_square.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="@color/white"
+    android:background="#ffffff"
     android:layout_height="match_parent">
     <TextView
         android:id="@+id/top_title"
@@ -57,10 +57,12 @@
         android:layout_height="1dp"/>
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swiperefee"
+        android:background="#00000000"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <ScrollView
+            android:background="#00000000"
             android:id="@+id/scrollView"
             android:overScrollMode="never"
             android:scrollbars="none"
@@ -68,6 +70,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <LinearLayout
+                android:background="#00000000"
                 android:id="@+id/linear"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
