--- a/app/src/main/res/layout/view/layout/view_main_pager.xml
+++ b/app/src/main/res/layout/view/layout/view_main_pager.xml
@@ -4,12 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <androidx.viewpager.widget.ViewPager
-        android:visibility="visible"
         android:id="@+id/pager"
-        android:layout_above="@id/linear_menu_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_above="@id/linear_menu"
+        android:background="#00000000"
+        android:visibility="visible" />
     <LinearLayout
+        android:background="#00000000"
         android:layout_above="@id/linear_menu"
         android:id="@+id/linear_menu_view"
         android:orientation="vertical"
@@ -21,13 +23,20 @@
             android:background="#00000000"
             android:gravity="center"
             android:textSize="15sp"
-            android:text="▲"
+            android:text=" ▲ "
             android:textColor="#f2f3f7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-        <LinearLayout
+        <View
             android:visibility="gone"
-            android:layout_above="@id/linear_menu"
+            android:id="@+id/xian_view"
+            android:background="#f2f3f7"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"/>
+        <LinearLayout
+            android:paddingTop="10dp"
+            android:background="#ffffff"
+            android:visibility="gone"
             android:id="@+id/menu_list_view"
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -75,7 +84,7 @@
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
-        android:background="#ffffff"
+        android:background="#00000000"
         android:padding="10dp"
         android:layout_alignParentBottom="true"
         android:id="@+id/linear_menu"
