--- a/app/src/main/res/layout/view/layout/view_square.xml
+++ b/app/src/main/res/layout/view/layout/view_square.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="#ffffff"
+    android:background="#00000000"
     android:layout_height="match_parent">
     <TextView
         android:id="@+id/top_title"
@@ -70,6 +70,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <LinearLayout
+                android:paddingBottom="90dp"
                 android:background="#00000000"
                 android:id="@+id/linear"
                 android:orientation="vertical"
