--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="Base.Theme.FederalSquare" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.FederalSquare" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:windowOptOutEdgeToEdgeEnforcement">true</item>
     </style>
     <style name="Theme.FederalSquare" parent="Base.Theme.FederalSquare" />
