--- a/app/src/main/res/layout/view/layout/view_hot.xml
+++ b/app/src/main/res/layout/view/layout/view_hot.xml
@@ -34,6 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <LinearLayout
+                android:paddingBottom="100dp"
                 android:id="@+id/linear"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
