--- a/app/src/main/res/layout/view/layout/view_main_pager.xml
+++ b/app/src/main/res/layout/view/layout/view_main_pager.xml
@@ -17,16 +17,16 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/menu_text"
+        <ImageView
+            android:id="@+id/menu_open"
             android:padding="10dp"
             android:background="#00000000"
             android:gravity="center"
             android:textSize="15sp"
-            android:text=" ▲ "
-            android:textColor="#f2f3f7"
+            android:src="@drawable/menu_up"
+            android:scaleType="fitCenter"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="30dp"/>
         <View
             android:visibility="gone"
             android:id="@+id/xian_view"
