--- a/app/src/main/res/layout/view/layout/view_main_pager.xml
+++ b/app/src/main/res/layout/view/layout/view_main_pager.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
+            android:alpha="0.2"
             android:id="@+id/menu_open"
             android:padding="10dp"
             android:background="#00000000"
